[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Sc0rpiOnUA"]
description = ""
name = "spoilerbot"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.0.1"
discord-py-slash-command = "^3.0.3"
flask = "^1.1.2"
pip = "^22.0.4"
python = "^3.8"
replit = "^3.0.0"
schedule = "^1.1.0"
[tool.poetry.dev-dependencies]
